--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-    <title>Vision Board Project</title>
+    <title>Vision Board Project for Skillcrushers</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:700%7CPermanent+Marker&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
